--- a/src/pixel_clusters.ipynb
+++ b/src/pixel_clusters.ipynb
@@ -77,7 +77,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x7fbacd727f50>"
+       "<matplotlib.image.AxesImage at 0x7f69af69a990>"
       ]
      },
      "execution_count": 6,
@@ -109,7 +109,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x7fbacd256f90>"
+       "<matplotlib.image.AxesImage at 0x7f69af1c9510>"
       ]
      },
      "execution_count": 7,
@@ -141,7 +141,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x7fbacd1d1390>"
+       "<matplotlib.image.AxesImage at 0x7f69af136990>"
       ]
      },
      "execution_count": 8,
@@ -167,16 +167,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x7fbacd14f2d0>"
+       "<matplotlib.image.AxesImage at 0x7f69aeffc510>"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -199,7 +199,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -209,7 +209,7 @@
     "        self.limit = limit\n",
     "            \n",
     "    def predict_one(self, img):\n",
-    "        img = lib.remove_clusters(cluster(self.kmeans, img), self.limit)\n",
+    "        img = traversal_filter(cluster(self.kmeans, img), self.limit)\n",
     "\n",
     "        lines = lib.detect_lines(img.astype(np.uint8))\n",
     "        \n",
@@ -218,12 +218,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(0.07360797365768214, 0.16233677068454663)"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "PixelClustersEstimator(kmeans).score(X_test[400:450], y_test[400:450])"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
