--- a/src/houghlines_pipeline.ipynb
+++ b/src/houghlines_pipeline.ipynb
@@ -916,11 +916,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 130,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def get_direction(lines):\n",
+    "def get_direction_max(lines):\n",
     "    if lines is None:\n",
     "        return 0\n",
     "    left = []\n",
@@ -945,7 +945,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 131,
    "metadata": {},
    "outputs": [
     {
@@ -954,22 +954,131 @@
        "(0.20524975167577542, 0.34360458385762627)"
       ]
      },
-     "execution_count": 98,
+     "execution_count": 131,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "ClassicHoughlinesEstimator(get_lines, get_direction).score(X_test, y_test)"
+    "ClassicHoughlinesEstimator(get_lines, get_direction_max).score(X_test, y_test)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 132,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def get_direction(lines):\n",
+    "def stick_to_labels(get_direction):\n",
+    "    def f(lines):\n",
+    "        if get_direction(lines) < -0.75:\n",
+    "            return -1\n",
+    "        elif get_direction(lines) < -0.25:\n",
+    "            return -0.5\n",
+    "        elif get_direction(lines) < 0.25:\n",
+    "            return 0\n",
+    "        elif get_direction(lines) < 0.75:\n",
+    "            return 0.5\n",
+    "        return 1\n",
+    "    return f"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 133,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(0.21072980017376194, 0.29582971329278895)"
+      ]
+     },
+     "execution_count": 133,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ClassicHoughlinesEstimator(get_lines, stick_to_labels(get_direction_max)).score(X_test, y_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 134,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_direction_sin_max(lines):\n",
+    "    if lines is None:\n",
+    "        return 0\n",
+    "    left = []\n",
+    "    right = []\n",
+    "    for line in lines:\n",
+    "        for rho, theta in line:\n",
+    "            # the higher the value, the more we should turn\n",
+    "            if theta > np.pi/2:\n",
+    "                left.append(np.pi - theta)\n",
+    "            else:\n",
+    "                right.append(theta)\n",
+    "    # get direction (keep intensity from main direction)\n",
+    "    if not left and not right:\n",
+    "        return 0\n",
+    "    elif not left:\n",
+    "        return math.sin(np.max(right))\n",
+    "    elif not right:\n",
+    "        return math.sin(-np.max(left))\n",
+    "    else:\n",
+    "        return 0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 135,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(0.1977056342726155, 0.28817322665523026)"
+      ]
+     },
+     "execution_count": 135,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ClassicHoughlinesEstimator(get_lines, get_direction_sin_max).score(X_test, y_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 136,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(0.19778453518679406, 0.2668114682884449)"
+      ]
+     },
+     "execution_count": 136,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ClassicHoughlinesEstimator(get_lines, stick_to_labels(get_direction_sin_max)).score(X_test, y_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 140,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_direction_sin_mean(lines):\n",
     "    if lines is None:\n",
     "        return 0\n",
     "    left = []\n",
@@ -994,7 +1103,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 141,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(0.19426700103208064, 0.30838609942867357)"
+      ]
+     },
+     "execution_count": 141,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ClassicHoughlinesEstimator(get_lines, get_direction_sin_mean).score(X_test, y_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 142,
    "metadata": {},
    "outputs": [
     {
@@ -1003,13 +1132,13 @@
        "(0.1923110338835795, 0.269244135534318)"
       ]
      },
-     "execution_count": 119,
+     "execution_count": 142,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "ClassicHoughlinesEstimator(get_lines, stick_to_labels(get_direction)).score(X_test, y_test)"
+    "ClassicHoughlinesEstimator(get_lines, stick_to_labels(get_direction_sin_mean)).score(X_test, y_test)"
    ]
   },
   {
