--- a/src/houghlines_pipeline.ipynb
+++ b/src/houghlines_pipeline.ipynb
@@ -708,7 +708,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 172,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -739,7 +739,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 173,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def stick_to_labels(get_direction):\n",
+    "    def f(lines):\n",
+    "        if get_direction(lines) < -0.75:\n",
+    "            return -1\n",
+    "        elif get_direction(lines) < -0.25:\n",
+    "            return -0.5\n",
+    "        elif get_direction(lines) < 0.25:\n",
+    "            return 0\n",
+    "        elif get_direction(lines) < 0.75:\n",
+    "            return 0.5\n",
+    "        return 1\n",
+    "    return f"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 166,
    "metadata": {},
    "outputs": [
     {
@@ -748,7 +768,7 @@
        "-0.5472222355511159"
       ]
      },
-     "execution_count": 104,
+     "execution_count": 166,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -759,7 +779,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 167,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -774,27 +794,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 168,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(0.26153760758487754, 0.4002033404892157)"
+       "(0.2639044542616346, 0.4277705046832247)"
       ]
      },
-     "execution_count": 106,
+     "execution_count": 168,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "ClassicHoughlinesEstimator(get_lines, get_direction).score(X_test, y_test)"
+    "ClassicHoughlinesEstimator(get_lines, get_direction).score(X_val, y_val)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 174,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(0.2864597351855871, 0.44059040590405896)"
+      ]
+     },
+     "execution_count": 174,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ClassicHoughlinesEstimator(get_lines, stick_to_labels(get_direction)).score(X_val, y_val)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 145,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -834,33 +874,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 147,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(0.4138145883247093, 0.5045993904818162)\n",
-      "(0.38404148437591723, 0.47753921427612994)\n",
-      "(0.3190757782908618, 0.43634362865739523)\n",
-      "(0.22689192338285383, 0.3896400602729451)\n",
-      "(0.2151509157487499, 0.3804850865623736)\n",
-      "(0.21539769491189642, 0.37984037312593727)\n",
-      "(0.21539769491189642, 0.37984037312593727)\n",
-      "(0.21539769491189642, 0.37984037312593727)\n",
-      "(0.21539769491189642, 0.37984037312593727)\n"
+      "(0.3903318952848952, 0.5060197544730912)\n",
+      "(0.3383120158243614, 0.4666553038060849)\n",
+      "(0.30669517362671, 0.44433682651064965)\n",
+      "(0.24988452429375205, 0.40464017169927524)\n",
+      "(0.23029277245120242, 0.38858951824209415)\n",
+      "(0.22857693963890813, 0.38883876002128753)\n",
+      "(0.22868269291003454, 0.38915233001791677)\n",
+      "(0.22868269291003454, 0.38915233001791677)\n",
+      "(0.22868269291003454, 0.38915233001791677)\n"
      ]
     }
    ],
    "source": [
     "for threshold in [0.1, 0.3, 0.5, 0.7, 0.9, 1.1, 1.3, 1.5, 1.7]:\n",
-    "    print(ClassicHoughlinesEstimator(get_lines, get_direction_threshold(threshold)).score(X_test, y_test))"
+    "    print(ClassicHoughlinesEstimator(get_lines, get_direction_threshold(threshold)).score(X_val, y_val))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 148,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -871,24 +911,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 150,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(0.6215464813205908, 0.6893136403127715)\n"
+      "(0.47430431951378343, 0.571825482960712)\n"
      ]
     }
    ],
    "source": [
-    "print(ZeroEstimator().score(X_test, y_test))"
+    "print(ZeroEstimator().score(X_val, y_val))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 151,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -899,24 +939,93 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 152,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(0.9474005861348597, 0.8040345091711997)\n"
+      "(0.8185784544338793, 0.7398285619413655)\n"
      ]
     }
    ],
    "source": [
-    "print(DumbEstimator().score(X_test, y_test))"
+    "print(DumbEstimator().score(X_val, y_val))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
+   "execution_count": 163,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_direction_mean(lines):\n",
+    "    if lines is None:\n",
+    "        return 0\n",
+    "    left = []\n",
+    "    right = []\n",
+    "    for line in lines:\n",
+    "        for rho, theta in line:\n",
+    "            # the higher the value, the more we should turn\n",
+    "            if theta > np.pi/2:\n",
+    "                left.append(np.pi - theta)\n",
+    "            else:\n",
+    "                right.append(theta)\n",
+    "    # get direction (keep intensity from main direction)\n",
+    "    if not left and not right:\n",
+    "        return 0\n",
+    "    elif not left:\n",
+    "        return np.mean(right)/(np.pi/2)\n",
+    "    elif not right:\n",
+    "        return -np.mean(left)/(np.pi/2)\n",
+    "    else:\n",
+    "        return 0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 164,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(0.22868269291003454, 0.38915233001791677)"
+      ]
+     },
+     "execution_count": 164,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ClassicHoughlinesEstimator(get_lines, get_direction_mean).score(X_val, y_val)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 175,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(0.24305838940742347, 0.40431951378337316)"
+      ]
+     },
+     "execution_count": 175,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ClassicHoughlinesEstimator(get_lines, stick_to_labels(get_direction_mean)).score(X_val, y_val)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 153,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -945,67 +1054,54 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": 154,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(0.20524975167577542, 0.34360458385762627)"
+       "(0.2527566506571811, 0.37898367462900523)"
       ]
      },
-     "execution_count": 131,
+     "execution_count": 154,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "ClassicHoughlinesEstimator(get_lines, get_direction_max).score(X_test, y_test)"
+    "ClassicHoughlinesEstimator(get_lines, get_direction_max).score(X_val, y_val)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": 155,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "def stick_to_labels(get_direction):\n",
-    "    def f(lines):\n",
-    "        if get_direction(lines) < -0.75:\n",
-    "            return -1\n",
-    "        elif get_direction(lines) < -0.25:\n",
-    "            return -0.5\n",
-    "        elif get_direction(lines) < 0.25:\n",
-    "            return 0\n",
-    "        elif get_direction(lines) < 0.75:\n",
-    "            return 0.5\n",
-    "        return 1\n",
-    "    return f"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 133,
+   "execution_count": 156,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(0.21072980017376194, 0.29582971329278895)"
+       "(0.27503147384415016, 0.3810071630128066)"
       ]
      },
-     "execution_count": 133,
+     "execution_count": 156,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "ClassicHoughlinesEstimator(get_lines, stick_to_labels(get_direction_max)).score(X_test, y_test)"
+    "ClassicHoughlinesEstimator(get_lines, stick_to_labels(get_direction_max)).score(X_val, y_val)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 134,
+   "execution_count": 157,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1034,47 +1130,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": 158,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(0.1977056342726155, 0.28817322665523026)"
+       "(0.2824357537307891, 0.3697464681750601)"
       ]
      },
-     "execution_count": 135,
+     "execution_count": 158,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "ClassicHoughlinesEstimator(get_lines, get_direction_sin_max).score(X_test, y_test)"
+    "ClassicHoughlinesEstimator(get_lines, get_direction_sin_max).score(X_val, y_val)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": 159,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(0.19778453518679406, 0.2668114682884449)"
+       "(0.305615367918385, 0.3684176253527241)"
       ]
      },
-     "execution_count": 136,
+     "execution_count": 159,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "ClassicHoughlinesEstimator(get_lines, stick_to_labels(get_direction_sin_max)).score(X_test, y_test)"
+    "ClassicHoughlinesEstimator(get_lines, stick_to_labels(get_direction_sin_max)).score(X_val, y_val)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 140,
+   "execution_count": 160,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1103,42 +1199,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 141,
+   "execution_count": 161,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(0.19426700103208064, 0.30838609942867357)"
+       "(0.2440698995391667, 0.3734823919708958)"
       ]
      },
-     "execution_count": 141,
+     "execution_count": 161,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "ClassicHoughlinesEstimator(get_lines, get_direction_sin_mean).score(X_test, y_test)"
+    "ClassicHoughlinesEstimator(get_lines, get_direction_sin_mean).score(X_val, y_val)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 142,
+   "execution_count": 162,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(0.1923110338835795, 0.269244135534318)"
+       "(0.25603863685695677, 0.3653353592359453)"
       ]
      },
-     "execution_count": 142,
+     "execution_count": 162,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "ClassicHoughlinesEstimator(get_lines, stick_to_labels(get_direction_sin_mean)).score(X_test, y_test)"
+    "ClassicHoughlinesEstimator(get_lines, stick_to_labels(get_direction_sin_mean)).score(X_val, y_val)"
    ]
   },
   {
