fix angle_from_lines + add a reduction parameter + add clusterify script

--- a/src/pixel_clusters.ipynb
+++ b/src/pixel_clusters.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -267,10 +267,158 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<module 'lib' from '/home/sfluor/projects/cs-isia-racer/notebooks/src/lib.py'>"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import importlib\n",
+    "importlib.reload(lib)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Xc_val, yc_val, Xc_test, yc_test = lib.load_dataset(\"../dataset_clusterified\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import cv2\n",
+    "\n",
+    "class RawEstimator(lib.Estimator):\n",
+    "    def __init__(self, weighted, reduction):\n",
+    "        self.weighted = weighted\n",
+    "        self.reduction = reduction\n",
+    "\n",
+    "    def predict_one(self, img):\n",
+    "        gray = cv2.cvtColor(img, cv2.COLOR_BGR2GRAY)\n",
+    "\n",
+    "        lines = lib.detect_lines(gray.astype(np.uint8))\n",
+    "        \n",
+    "        return lib.angle_from_lines(lines, self.weighted, reduction=self.reduction)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(0.4066073292157201, 0.5388023616932661)"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "RawEstimator(True, np.mean).score(Xc_val, yc_val)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(0.4094301668589518, 0.5400412335885592)"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "RawEstimator(False, np.max).score(Xc_val, yc_val)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def maxabs(x):\n",
+    "    mi = np.min(x)\n",
+    "    ma = np.max(x)\n",
+    "    \n",
+    "    if abs(ma) > abs(mi):\n",
+    "        return ma\n",
+    "    \n",
+    "    return mi"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "score: (0.4094301668589518, 0.5400412335885592) weighted: False, reduction: <function mean at 0x7f491c023ef0>\n",
+      "score: (0.4189458215978799, 0.5482930275487115) weighted: False, reduction: <function maxabs at 0x7f48c3b5d8c0>\n",
+      "score: (0.4905764190150883, 0.5882438305231902) weighted: False, reduction: <function <lambda> at 0x7f48c3affdd0>\n",
+      "score: (0.4920492613251294, 0.5882610114836975) weighted: False, reduction: <function <lambda> at 0x7f48c3affcb0>\n",
+      "score: (0.4066073292157201, 0.5388023616932661) weighted: True, reduction: <function mean at 0x7f491c023ef0>\n",
+      "score: (0.3628844092382343, 0.5142721901191757) weighted: True, reduction: <function maxabs at 0x7f48c3b5d8c0>\n",
+      "score: (0.4902776992066145, 0.5881796626916989) weighted: True, reduction: <function <lambda> at 0x7f48c3affdd0>\n",
+      "score: (0.4891211302306176, 0.587507143701028) weighted: True, reduction: <function <lambda> at 0x7f48c3affd40>\n"
+     ]
+    }
+   ],
+   "source": [
+    "for weighted in [False, True]:\n",
+    "    for reduction in [\n",
+    "        np.mean,\n",
+    "        maxabs,\n",
+    "    ]:\n",
+    "        score = RawEstimator(weighted, reduction).score(Xc_val, yc_val)\n",
+    "        print(f\"score: {score} weighted: {weighted}, reduction: {reduction}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "maxabs(np.array([1, 2, -5, 4]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "np.mean(np.array([1, 2, -5, 4]))"
+   ]
   },
   {
    "cell_type": "code",
