clean gauss+canny+hog+xgb NB

--- a/src/gauss_canny_hog_xgboost.ipynb
+++ b/src/gauss_canny_hog_xgboost.ipynb
@@ -401,14 +401,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Iteration 4/8, time since start: 74.87068724632263, results: (0.04730383746270875, 0.13809290966604898)7)"
+      "Iteration 8/8, time since start: 157.22966170310974, results: (0.04319742878020396, 0.13192288520667142))\n",
+      "End\n"
      ]
     }
    ],
@@ -418,9 +419,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{((5, 5), 0.5, 0.25, 170, 250, 50): (0.036454567735116815, 0.1224141467677797),\n",
+      " ((5, 5), 0.5, 0.25, 180, 250, 50): (0.03481345553969829, 0.1198481326829844),\n",
+      " ((5, 5), 1, 0.25, 170, 250, 50): (0.048486170388274845, 0.13651593343684057),\n",
+      " ((5, 5), 1, 0.25, 180, 250, 50): (0.04730383746270875, 0.13809290966604898),\n",
+      " ((7, 7), 0.5, 0.25, 170, 250, 50): (0.036454567735116815, 0.1224141467677797),\n",
+      " ((7, 7), 0.5, 0.25, 180, 250, 50): (0.03481345553969829, 0.1198481326829844),\n",
+      " ((7, 7), 1, 0.25, 170, 250, 50): (0.04502693423469403, 0.13367060487544458),\n",
+      " ((7, 7), 1, 0.25, 180, 250, 50): (0.04319742878020396, 0.13192288520667142)}\n"
+     ]
+    }
+   ],
    "source": [
     "import pprint\n",
     "\n",
@@ -429,9 +445,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(((5, 5), 0.5, 0.25, 180, 250, 50), (0.03481345553969829, 0.1198481326829844))\n",
+      "(((5, 5), 0.5, 0.25, 180, 250, 50), (0.03481345553969829, 0.1198481326829844))\n",
+      "(((5, 5), 0.5, 0.25, 180, 250, 50), (0.03481345553969829, 0.1198481326829844))\n"
+     ]
+    }
+   ],
    "source": [
     "print(min([(k, v) for k, v in results.items()], key=lambda x: x[1][0]))\n",
     "print(min([(k, v) for k, v in results.items()], key=lambda x: x[1][1]))\n",
